llvm/test/tools/llvm-ifs/conflict-header-format.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/object.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# CHECK-IFS: error: Interface Stub: ObjectFileFormat Mismatch.
# CHECK-IFS-NEXT: Filenames:
# CHECK-IFS-NEXT: ObjectFileFormat Values: TBD ELF

--- !experimental-ifs-v2
IfsVersion: 2.0
Triple:          x86_64-apple-unknown
ObjectFileFormat: TBD
Symbols:
  - { Name: a, Type: Func }
...
